# Art-Portfolio-Qt

./: .gitignore  CMakeLists.txt  README.md  finalproject_updated.rar  main.cpp
UI/: MainWindow.cpp  MainWindow.h  RepoSelectorWindow.cpp  RepoSelectorWindow.h
Validator/: ArtworkValidator.cpp  ArtworkValidator.h
domain/: artwork.cpp  artwork.h
exceptions/: exception.cpp  exception.h
operations/: operation.h  operationStack.cpp  operationStack.h
repository/: CSVrepo.cpp  CSVrepo.h  JSONrepo.cpp  JSONrepo.h  defaultRepo.cpp  defaultRepo.h  repoInterface.h
service/: filter.cpp  filter.h  service.cpp  service.h
tests/: tests.cpp  tests.h
